# openhandgesture

./: .gitignore  Acquire_Send_Detect.cpp  CMakeLists.txt  Extract_Skeleton.cpp  README.md
cmake/Modules/: FindTensorFlow.cmake
essentials/: Kinect2_CameraParams.yml  gesture-recognition-kinect2-frame.fbs  gesture-recognition-kinect2-frame_generated.h  gesture-recognition-request.fbs  gesture-recognition-request_generated.h  indices_10.txt  one_skeleton.fbs  one_skeleton_generated.h
